--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -15,5 +15,10 @@ target 'EmojiKeyboardExample' do
   use_flipper!({ 'Flipper' => '0.80.0' })
   post_install do |installer|
     flipper_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+      end
+    end
   end
 end
