--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
   },
   "dependencies": {
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-svg": "^12.1.1",
     "unicode-emoji-json": "^0.2.1"
   }
 }
