--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-svg": "^12.1.1"
   },
   "jest": {
     "preset": "react-native",
@@ -151,8 +153,6 @@
     ]
   },
   "dependencies": {
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-svg": "^12.1.1",
     "unicode-emoji-json": "^0.2.1"
   }
 }
