--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jake7/react-native-emoji-keyboard",
+  "name": "rn-emoji-keyboard",
   "version": "0.1.1-beta.1",
   "description": ".",
   "main": "lib/commonjs/index",
