--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
           node-version: 14
       - uses: c-hive/gha-yarn-cache@v1
       - name: Install node modules
-        run: yarn install
+        run: yarn
       - name: lint
         run: yarn lint
       - name: typescript
