fix: ios example

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -20,5 +20,8 @@ target 'EmojiKeyboardExample' do
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
       end
     end
+    installer.pods_project.build_configurations.each do |config|
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
   end
 end
