--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-flipper-performance-plugin": "0.3.1",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
