--- a/example/package.json
+++ b/example/package.json
@@ -12,13 +12,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@shopify/flash-list": "^1.2.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-flipper-performance-plugin": "0.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-flipper-performance-plugin": "0.3.1",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
