docs: add directory to workflow file

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          directory: ./docs
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
