docs: change test-deploy file

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -23,4 +23,6 @@ jobs:
           cd docs
           yarn install --frozen-lockfile
       - name: Test build website
-        run: yarn build
+        run: |
+          cd docs
+          yarn build
