--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-emoji-keyboard",
-  "version": "0.7.1",
+  "version": "1.0.0-alpha.0",
   "description": "Super performant, lightweight, fully customizable emoji picker. Designated to be user and developer friendly! 💖",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
