--- a/example/package.json
+++ b/example/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.2",
+    "react": "18.1.0",
+    "react-native": "0.70.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-reanimated": "^3.0.0-rc.3",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.4.0",
     "react-native-flipper-performance-plugin": "0.3.1",
     "react-native-svg": "^12.1.1"
@@ -25,6 +25,6 @@
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "babel-plugin-module-resolver": "^4.0.0",
-    "metro-react-native-babel-preset": "^0.64.0"
+    "metro-react-native-babel-preset": "^0.72.3"
   }
 }
