--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
-    "pods": "cd example && pod-install --quiet",
+    "pods": "cd example && cd ios && USE_FABRIC=1 RCT_NEW_ARCH_ENABLED=1 pod install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods",
     "generateIcons": "node ./scripts/generateIcons.js"
   },
@@ -67,7 +67,7 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-builder-bob": "^0.18.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^13.4.0",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3",
     "unicode-emoji-json": "^0.2.1"
