--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
+    "@testing-library/react-native": "^11.4.0",
     "@twgdev/prettier-config": "^1.0.2",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
@@ -68,6 +69,7 @@
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.18.0",
     "react-native-svg": "^12.1.1",
+    "react-test-renderer": "16.13.1",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3",
     "unicode-emoji-json": "^0.3.1"
