--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,7 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-gesture-handler": "^2.7.1",
-    "react-native-reanimated": "^3.0.0-rc.3",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.4.0",
     "react-native-flipper-performance-plugin": "0.3.1",
