--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "react": "16.13.1",
     "react-native": "0.63.5",
     "react-native-builder-bob": "^0.18.0",
-    "react-native-svg": "^13.4.0",
     "react-test-renderer": "16.13.1",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3",
@@ -76,8 +75,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-svg": "^13.4.0"
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
