--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "react-test-renderer": "16.13.1",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3",
-    "unicode-emoji-json": "^0.4.0"
+    "unicode-emoji-json": "^0.4.0",
+    "emojilib": "^3.0.10"
   },
   "peerDependencies": {
     "react": "*",
@@ -137,6 +138,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {}
+  }
 }
