--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "ios:ip12": "react-native run-ios --simulator='iPhone 12'"
+    "ios:ip12": "react-native run-ios --simulator='iPhone 12'",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
