fix: lint and typescript github workflows

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - uses: actions/setup-node@v3
         with:
           node-version: 18
