--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "prettier": "^2.0.5",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-builder-bob": "^0.20.0",
+    "react-native-builder-bob": "^0.23.2",
     "react-test-renderer": "18.2.0",
     "release-it": "^15.0.0",
     "typescript": "^5.0.2",
@@ -88,7 +88,7 @@
   "engines": {
     "node": ">= 16.0.0"
   },
-  "packageManager": "^yarn@1.22.15",
+  "packageManager": "yarn@1.22.21",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
